Fixed size of signature attack collapse button

--- a/Alien Roleplaying Game/Alien-Roleplaying-Game.css
+++ b/Alien Roleplaying Game/Alien-Roleplaying-Game.css
@@ -525,6 +525,7 @@ div.span-weapons .tab-weapons {
     transform: rotate(45deg);
     width: 18px;
     height: 18px;
+    font-size: 16px;
 }
 /* .charsheet input.expand + span {
     padding: 0;
